fix: z-index;

--- a/stylesheet.scss
+++ b/stylesheet.scss
@@ -14,7 +14,8 @@ github-corner {
     transform: scale(1);
     opacity: 1;
     -webkit-transition: opacity .8s ease, -webkit-transform 1.4s ease;
-    transition: opacity .8s ease, transform 1.4s ease
+    transition: opacity .8s ease, transform 1.4s ease;
+    z-index: 0;
 }
 
 #particles-js {
